fix few eslint errors and add jsdom dev dependency

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint-plugin-compat": "^4.0.2",
     "eslint-plugin-ecmalist": "^1.0.8",
     "eslint-plugin-import": "2.25.4",
+    "jsdom": "^27.1.0",
     "sinon": "13.0.1",
     "stylelint": "14.6.0",
     "stylelint-config-prettier": "9.0.3",
