MWPW-183673: Publish Confirmation Dialog
Add the publish confirmation dialog to the Sidekick.

--- a/tools/sidekick/config.json
+++ b/tools/sidekick/config.json
@@ -3,6 +3,10 @@
   "trustedHosts": ["milo.adobe.com"],
   "plugins": [
     {
+      "id": "publish",
+      "confirm": true
+    },
+    {
       "id": "path",
       "title": "Path",
       "environments": [ "edit" ],
