--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lint": "npm run lint:js && npm run lint:css",
     "lint:fix": "npm run lint:js -- --fix && npm run lint:css --fix",
     "lint:js": "eslint .",
-    "lint:css": "stylelint 'blocks/**/*.css' 'express/code/styles/*.css'"
+    "lint:css": "stylelint 'blocks/**/*.css' 'express/code/styles/*.css'",
+    "build:htm-preact": "microbundle express/code/scripts/build/htm-preact.js -o express/code/scripts/vendors/htm-preact.js -f modern --no-sourcemap --target web; mv express/code/scripts/vendors/htm-preact.modern.js express/code/scripts/vendors/htm-preact.js"
   },
   "repository": {
     "type": "git",
@@ -49,14 +50,13 @@
     "eslint-plugin-compat": "^4.0.2",
     "eslint-plugin-ecmalist": "^1.0.8",
     "eslint-plugin-import": "2.25.4",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "htm": "^3.1.1",
     "microbundle": "^0.15.1",
+    "preact": "^10.27.2",
     "sinon": "13.0.1",
     "stylelint": "14.6.0",
     "stylelint-config-prettier": "9.0.3",
     "stylelint-config-standard": "25.0.0"
-  },
-  "dependencies": {
-    "htm": "^3.1.1",
-    "preact": "^10.27.2"
   }
 }
